renderer/storybook/templates/ManageTemplate/styles.css
.manage-template__order {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  border-top: 1px solid var(--color-border);

  @media (--viewport-l) {
    flex-wrap: nowrap;
  }
}

.manage-template__info {
  border-top: 1px solid var(--color-border);
}

.manage-template__order-book {
  flex: 1 0 100%;
  overflow: hidden;
  min-width: 300px;

  @media (--viewport-m) {
    flex: 1 0 50%;
  }

  @media (--viewport-l) {
    border-right: 1px solid var(--color-border);
  }
}

.manage-template__order-form {
  background-color: var(--color-white);
  flex: 1 0 25%;
  min-width: 256px;
  border-top: 1px solid var(--color-border);

  @media (--viewport-l) {
    border-top: none;
  }
}

.manage-template__order-form-wrap {
  margin: 0 var(--space-s) var(--space-s);
}

.manage-template__holdings {
  background-color: var(--color-white);
  flex: 1 0 25%;
  min-width: 250px;
  border-bottom: 1px solid var(--color-border);

  @media (--viewport-m) {
    border-right: 1px solid var(--color-border);
    border-bottom: none;
  }
}

.manage-template__holdings-wrap {
  border-top: 1px solid var(--color-border);
  max-height: 494px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
}

.manage-template__holdings-wrap :global(.holding:first-child) {
  border: none;
}

.manage-template__holdings-wrap::-webkit-scrollbar {
  width: 5px;
  background-color: var(--color-border);
}

.manage-template__holdings-wrap::-webkit-scrollbar-track,
.manage-template__holdings-wrap::-webkit-scrollbar-track-piece {
  background-color: transparent;
}

.manage-template__holdings-wrap::-webkit-scrollbar-thumb {
  background-color: var(--color-grey);
  border-radius: 3px;
}

.manage-template__orders {
  background-color: var(--color-white);
  border-top: 1px solid var(--color-border);

  @media (--viewport-l) {
    display: flex;
    width: 100%;
    flex: 1;
  }
}

.manage-template__open-orders {
  @media (--viewport-l) {
    flex: 0 0 50%;
    order: 2;
  }
}

.manage-template__open-orders-wrap {
  padding: 0 var(--space-s) var(--space-s) var(--space-s);
}

.manage-template__recent-trades {
  border-top: 1px solid var(--color-border);

  @media (--viewport-l) {
    border-right: 1px solid var(--color-border);
    border-top: none;
    flex: 0 0 50%;
    order: 1;
  }
}

.manage-template__header {
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 2;
}

.manage-template__content {
  display: flex;
  flex-direction: column;

  @media (--viewport-l) {
    flex: 1;
  }
}

.manage-template__content-wrap {
  padding: 50px 0 0;
  display: flex;
  flex-direction: column;
  min-height: calc(100vh - 33px);
}

.manage-template__title {
  background-color: var(--color-secondary);
  padding: var(--space-s) var(--space-m) var(--space-s);
}

.manage-template__subtitle {
  margin: var(--space-s);
}

.manage-template__subtitle::after {
  border: none;
}

